--- a/pom.xml
+++ b/pom.xml
@@ -27,25 +27,32 @@
         </repository>
     </repositories>
 
-
     <properties>
         <java.version>11</java.version>
     </properties>
 
     <dependencies>
-
-<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-jdbc &ndash;&gt;-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>io.r2dbc</groupId>
+            <artifactId>r2dbc-pool</artifactId>
+            <version>0.8.3.RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>dev.miku</groupId>
             <artifactId>r2dbc-mysql</artifactId>
             <version>0.8.1.RELEASE</version>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>com.github.jasync-sql</groupId>-->
+<!--            <artifactId>jasync-mysql</artifactId>-->
+<!--            <version>1.1.3</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>mysql</groupId>
