--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.r2dbc.url=r2dbc:mysql://localhost:3306/fotogram
 spring.r2dbc.username=root
 spring.r2dbc.password=root
+spring.r2dbc.pool.enabled=false
 
 spring.flyway.url=jdbc:mysql://localhost:3306/fotogram?serverTimezone=UTC
 spring.flyway.user=root
