--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.flyway.url=jdbc:mysql://localhost:3306/fotogram?serverTimezone=UTC
 spring.flyway.user=root
 spring.flyway.password=root
 
+spring.resources.static-locations="file:/Users/trelloiii/Desktop/JavaProjects/fotogram/static/"
+spring.webflux.static-path-pattern=/**
+
+upload.path=/Users/trelloiii/Desktop/JavaProjects/fotogram/static
+
