upgrade security to jwt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,6 @@ spring.webflux.static-path-pattern=img/**
 upload.path=/Users/trelloiii/Desktop/JavaProjects/fotogram/static
 
 domain=http://localhost:8080/
+jwt.secret=secret-very-long-and-hard-to-force
+jwt.expiration=86400
 
