refresh token for jwt auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,8 @@ upload.path=/Users/trelloiii/Desktop/JavaProjects/fotogram/static
 
 domain=http://localhost:8080/
 jwt.secret=secret-very-long-and-hard-to-force
-jwt.expiration=86400
+#24 hours
+jwt.access.exp=15
+#one month
+jwt.refresh.exp =2629744
 
