--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.r2dbc.url=r2dbc:mysql://localhost:3306/fotogram
 spring.r2dbc.username=root
 spring.r2dbc.password=root
-spring.r2dbc.pool.enabled=false
+spring.r2dbc.pool.enabled=true
+spring.reactor.debug-agent.enabled=false
+debug=false
+#spring.r2dbc.pool.enabled=true
+#spring.r2dbc.pool.max-idle-time=0
 
 
 spring.flyway.url=jdbc:mysql://localhost:3306/fotogram?serverTimezone=UTC
